# rim

./: .gitignore  Cargo.toml  configuration.toml  outline.md
.github/workflows/: release.yml  simple_release.yml
locales/: en-US.json  zh-CN.json
plans/: unix-env-var-handling.md
resources/: toolkits.toml
resources/templates/: env.fish
resources/toolkit-manifest/offline/: bisheng.toml  community.toml
resources/toolkit-manifest/online/: bisheng.toml  community.toml
rim_common/: Cargo.toml  build.rs
rim_common/src/: lib.rs
rim_common/src/types/: build_config.rs  tool_info.rs  toolkit_manifest.rs
rim_common/src/utils/: download.rs  extraction.rs  file_system.rs  log.rs  mod.rs  obs_sign.rs  process.rs
rim_dev/: Cargo.toml
rim_dev/src/: dist.rs  main.rs  run.rs  vendor.rs
rim_dev/src/mocked/: mod.rs
rim_gui/: pnpm-lock.yaml  vite.config.ts
rim_gui/src/: App.vue  main.ts
rim_gui/src-tauri/: Cargo.toml  tauri.conf.json
rim_gui/src-tauri/src/: common.rs  installer_mode.rs  main.rs  manager_mode.rs  progress.rs  webview.rs
rim_gui/src/components/: BaseButton.vue  BaseDetails.vue  BasePanel.vue  BaseProgress.vue  CheckBoxGroup.vue  Inputton.vue  LabeledInput.vue  PageNavButtons.vue  SplitBox.vue  Titlebar.vue
rim_gui/src/composables/: useToolkitInstallation.ts
rim_gui/src/layouts/: ManagerUpdate.vue
rim_gui/src/utils/: common.ts  events.ts  managerConf.ts
rim_gui/src/views/installer/: ComponentsView.vue  FinishView.vue  HomeView.vue  InstallView.vue  ProfileView.vue
rim_gui/src/views/manager/: CompleteView.vue  ComponentsView.vue  ManagerView.vue  ProgressView.vue  ToolkitItem.vue  UninstallView.vue
rim_gui/src/views/manager/components/: TheManagerLayout.vue
src/: lib.rs
src/cli/: check.rs  common.rs  component.rs  install.rs  mod.rs  tryit.rs  uninstall.rs  update.rs
src/core/: env_backup.rs  install.rs  mod.rs  path_ext.rs  rustup.rs  toolkit.rs  toolkit_manifest_ext.rs  tools.rs  try_it.rs  uninstall.rs  update.rs
src/core/custom_instructions/: buildtools.rs  vscode.rs
src/core/install/: environment.rs  errors.rs  mod.rs  toolchain.rs  tools.rs
src/core/os/: mod.rs  unix.rs  windows.rs
src/core/os/env_backup/: mod.rs  unix.rs  windows.rs
src/core/parser/: cargo_manifest.rs  dist_manifest.rs  release_info.rs
