[package]
name = "rim"
version.workspace = true
edition.workspace = true
description.workspace = true
rust-version.workspace = true

[features]
default = []
no-web = []
gui = []

[[bin]]
name = "rim-cli"
path = "src/bin/rim_cli.rs"

[workspace]
members = ["rim_gui/src-tauri", "rim_dev", "rim_common", "rim_test/*"]

[workspace.package]
version = "0.10.0"
edition = "2021"
description = "An interactive Rust installation manager"
rust-version = "1.80.0" # Dominated by 'std::sync::LazyLock'

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
cfg-if = "1"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
url = { version = "2", features = ["serde"] }
toml = "0.8.15"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
tempfile = "3"
indexmap = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "native-tls-vendored", "blocking"] }
rust-i18n = "3"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
tar = "0.4"
xz2 = "0.1"
zip = "2"

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs.workspace = true
glob = "0.3.2"
serde.workspace = true
url.workspace = true
libc = "0.2"
toml.workspace = true
tempfile.workspace = true
env_proxy = "0.4.1"
indexmap.workspace = true
rim_common = { path = "rim_common" }
rust-i18n.workspace = true
log.workspace = true
semver = "1.0.23"
self-replace = "1"
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
rim-test-support = { version = "0.1.0", path = "rim_test/rim-test-support" }

[build-dependencies]
rim_common = { path = "rim_common" }

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winuser", "winbase"] }
cc = "1"
