[package]
name = "rim_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
chrono.workspace = true
dirs.workspace = true
env_proxy = "0.4.1"
fern.workspace = true
file-id = "0.2"
flate2 = "1"
indexmap.workspace = true
indicatif = "0.17"
lazy_static = "1.4"
log.workspace = true
os_pipe = "1.2.1"
reqwest.workspace = true
rust-i18n.workspace = true
sevenz-rust = "0.6.1"
serde.workspace = true
sys-locale = "0.3.1"
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
xz2.workspace = true
zip.workspace = true

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winbase"] }
