[package]
name = "rim_dev"
version = "0.1.0"
description = "Helper crate for RIM"
edition = "2021"

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
indexmap.workspace = true
reqwest.workspace = true
rim_common = { path = "../rim_common" }
serde.workspace = true
serde_json = "1"
sha2 = "0.10"
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
url.workspace = true
xz2.workspace = true
zip.workspace = true
log.workspace = true
