[package]
name = "rim-gui"
version.workspace = true
description.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "dialog-all", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rim = { path = "../..", features = [ "gui" ] }
rim_common = { path = "../../rim_common" }
serde_json = "1"
###
anyhow.workspace = true
serde.workspace = true
url.workspace = true
toml.workspace = true
tokio.workspace = true
tempfile.workspace = true
rust-i18n.workspace = true
log.workspace = true
fern.workspace = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
no-web = ["rim/no-web"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "shlobj", "knownfolders", "combaseapi", "winerror"] }
winreg = "0.52.0"
